tests: Convert fuzzers over to use the file gensio
Do we don't have to disable epoll when fuzzing.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -17,7 +17,7 @@ test_setup:
 # fuzz-results-certauth/crashes or fuzz-results-certauth/hangs directories.
 # To reproduce the failure, in this directory, run:
 #
-# ../tools/gensiot --dummyrand randfile -i echo 'certauth(CA=ca/clientcert.pem,allow-unencrypted,mode=server),file(infile=fuzz-results-certauth/[hangs|crashes]/<file>)'
+# ../tools/gensiot --dummyrand certauth-randfile -i echo 'certauth(CA=ca/clientcert.pem,allow-unencrypted,mode=server),file(infile="fuzz-results-certauth/[hangs|crashes]/<file>")'
 #
 # where the <file> is the specific failure.
 #
@@ -26,21 +26,22 @@ test_fuzz_certauth:
 	mkdir -p fuzz-test-certauth
 	mkdir -p fuzz-results-certauth
 	$(AM_TESTS_ENVIRONMENT) python $(utst_srcdir)/tests/test_fuzz_setup.py \
-		$(top_builddir)/tools/gensiot randfile \
+		$(top_builddir)/tools/gensiot certauth-randfile \
 		'certauth(cert=ca/clientcert.pem,key=ca/clientkey.pem,allow-unencrypted)'\
 		'certauth(CA=ca/clientcert.pem,allow-unencrypted)' \
 		fuzz-test-certauth/tracefile
 	afl-fuzz -i fuzz-test-certauth -o fuzz-results-certauth \
-		$(top_builddir)/tools/gensiot --dummyrand randfile \
-		-i echo -a \
-		"certauth(CA=ca/clientcert.pem,allow-unencrypted),stdio"
+		-f certauth-infile \
+		$(top_builddir)/tools/gensiot --dummyrand certauth-randfile \
+		-i echo \
+		"certauth(CA=ca/clientcert.pem,allow-unencrypted,mode=server),file(infile=certauth-infile)"
 
 #
 # If you get mux fuzz failures, they will be in the
 # fuzz-results-mux/crashes or fuzz-results-mux/hangs directories.
 # To reproduce the failure, in this directory, run:
 #
-# ../tools/gensiot --dummyrand randfile -i echo 'mux(writebuf=10000,mode=server),file(infile=fuzz-results-mux/[hangs|crashes]/<file>)'
+# ../tools/gensiot --dummyrand mux-randfile -i echo 'mux(writebuf=10000,mode=server),file(infile="fuzz-results-mux/[hangs|crashes]/<file>")'
 #
 # where the <file> is the specific failure.
 #
@@ -49,18 +50,19 @@ test_fuzz_mux:
 	mkdir -p fuzz-test-mux
 	mkdir -p fuzz-results-mux
 	$(AM_TESTS_ENVIRONMENT) python $(utst_srcdir)/tests/test_fuzz_setup.py \
-		$(top_builddir)/tools/gensiot randfile \
+		$(top_builddir)/tools/gensiot mux-randfile \
 		'mux' 'mux' fuzz-test-mux/tracefile
-	afl-fuzz -i fuzz-test-mux -o fuzz-results-mux \
-		$(top_builddir)/tools/gensiot --dummyrand randfile \
-		-i echo -a "mux(writebuf=10000),stdio"
+	afl-fuzz -i fuzz-test-mux -o fuzz-results-mux -f mux-infile \
+		$(top_builddir)/tools/gensiot --dummyrand mux-randfile \
+		-i echo \
+		"mux(writebuf=10000,mode=server),file(infile=mux-infile)"
 
 #
 # If you get ssl fuzz failures, they will be in the
 # fuzz-results-ssl/crashes or fuzz-results-ssl/hangs directories.
 # To reproduce the failure, in this directory, run:
 #
-# ../tools/gensiot --dummyrand randfile -i echo 'ssl(key=ca/key.pem,cert=ca/cert.pem,mode=server),file(infile=fuzz-results-ssl/[hangs|crashes]/<file>)'
+# ../tools/gensiot --dummyrand ssl-randfile -i echo 'ssl(key=ca/key.pem,cert=ca/cert.pem,mode=server),file(infile="fuzz-results-ssl/[hangs|crashes]/<file>")'
 #
 # where the <file> is the specific failure.
 #
@@ -69,21 +71,21 @@ test_fuzz_ssl:
 	mkdir -p fuzz-test-ssl
 	mkdir -p fuzz-results-ssl
 	$(AM_TESTS_ENVIRONMENT) python $(utst_srcdir)/tests/test_fuzz_setup.py \
-		$(top_builddir)/tools/gensiot randfile \
+		$(top_builddir)/tools/gensiot ssl-randfile \
 		'ssl(CA=ca/CA.pem)'\
 		'ssl(key=ca/key.pem,cert=ca/cert.pem)' \
 		fuzz-test-ssl/tracefile
-	afl-fuzz -i fuzz-test-ssl -o fuzz-results-ssl \
-		$(top_builddir)/tools/gensiot --dummyrand randfile \
-		-i echo -a \
-		"ssl(key=ca/key.pem,cert=ca/cert.pem),stdio"
+	afl-fuzz -i fuzz-test-ssl -o fuzz-results-ssl -f ssl-infile \
+		$(top_builddir)/tools/gensiot --dummyrand ssl-randfile \
+		-i echo \
+		"ssl(key=ca/key.pem,cert=ca/cert.pem,mode=server),file(infile=ssl-infile)"
 
 #
 # If you get telnet fuzz failures, they will be in the
 # fuzz-results-telnet/crashes or fuzz-results-telnet/hangs directories.
 # To reproduce the failure, in this directory, run:
 #
-# ../tools/gensiot --dummyrand randfile -i echo 'telnet,file(infile=fuzz-results-telnet/[hangs|crashes]/<file>)'
+# ../tools/gensiot --dummyrand telnet-randfile -i echo 'telnet(mode=server),file(infile="fuzz-results-telnet/[hangs|crashes]/<file>")'
 #
 # where the <file> is the specific failure.
 #
@@ -92,11 +94,11 @@ test_fuzz_telnet:
 	mkdir -p fuzz-test-telnet
 	mkdir -p fuzz-results-telnet
 	$(AM_TESTS_ENVIRONMENT) python $(utst_srcdir)/tests/test_fuzz_setup.py \
-		$(top_builddir)/tools/gensiot randfile \
+		$(top_builddir)/tools/gensiot telnet-randfile \
 		'telnet' 'telnet' fuzz-test-telnet/tracefile
-	afl-fuzz -i fuzz-test-telnet -o fuzz-results-telnet \
-		$(top_builddir)/tools/gensiot --dummyrand randfile \
-		-i echo -a "telnet,stdio"
+	afl-fuzz -i fuzz-test-telnet -o fuzz-results-telnet -f telnet-infile \
+		$(top_builddir)/tools/gensiot --dummyrand telnet-randfile \
+		-i echo "telnet(mode=server),file(infile=telnet-infile)"
 
 test_fuzz: test_fuzz_certauth test_fuzz_mux test_fuzz_ssl test_fuzz_telnet
 
@@ -106,6 +108,12 @@ EXTRA_DIST = $(TESTS) utils.py ipmisimdaemon.py termioschk.py \
 	test_fuzz_setup.py
 
 clean-local:
-	-rm -rf ca randfile fuzz-test-certauth fuzz-results-certauth \
-		fuzz-test-mux fuzz-results-mux \
-		fuzz-test-ssl fuzz-results-ssl
+	-rm -rf ca \
+		certauth-randfile fuzz-test-certauth fuzz-results-certauth \
+		certauth-infile \
+		mux-randfile fuzz-test-mux fuzz-results-mux \
+		mux-infile \
+		ssl-randfile fuzz-test-ssl fuzz-results-ssl \
+		ssl-infile \
+		telnet-randfile fuzz-test-telnet fuzz-results-telnet \
+		telnet-infile
