Add a helper to create autoconf stuff
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,4 +5,4 @@ SUBDIRS = lib include $(SWIG_DIR) tests tools man
 
 DIST_SUBDIRS = lib swig include tests tools man
 
-EXTRA_DIST = README.rst
+EXTRA_DIST = README.rst reconf
