tests: Add make_keys to the makefile
So it get included in the distribution.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -105,7 +105,7 @@ test_fuzz: test_fuzz_certauth test_fuzz_mux test_fuzz_ssl test_fuzz_telnet
 TESTS = test_gensio.py test_syncio.py
 
 EXTRA_DIST = $(TESTS) utils.py ipmisimdaemon.py termioschk.py \
-	test_fuzz_setup.py
+	test_fuzz_setup.py make_keys
 
 clean-local:
 	-rm -rf ca \
