--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -6,7 +6,7 @@ man_MANS = gensio.5 gensio_event.3 str_to_gensio.3 gensio_set_callback.3 \
 	gensio_accepter_event.3 gensio_acc_set_callback.3 \
 	gensio_acc_shutdown.3 gensio_acc_set_accept_callback_enable.3 \
 	gensio_acc_control.3 gensio_acc_get_type.3 gensio_add_default.3 \
-	str_to_gensio_accepter.3
+	str_to_gensio_accepter.3 gensio_acc_accept_s.3
 
 LN_SF = $(LN_S) -f
 
@@ -55,7 +55,7 @@ install-data-hook:
 	$(LN_SF) gensio_add_default.3 $(DESTDIR)$(man3dir)/gensio_get_defaultaddr.3
 	$(LN_SF) gensio_add_default.3 $(DESTDIR)$(man3dir)/gensio_del_default.3
 	$(LN_SF) gensio_add_default.3 $(DESTDIR)$(man3dir)/gensio_reset_defaults.3
-
+	$(LN_SF) gensio_acc_accept_s.3 $(DESTDIR)$(man3dir)/gensio_acc_set_sync.3
 
 RM_F = -rm -f
 
@@ -104,5 +104,6 @@ uninstall-hook:
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_get_defaultaddr.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_del_default.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_reset_defaults.3
+	$(RM_F) $(DESTDIR)$(man3dir)/gensio_acc_set_sync.3
 
 EXTRA_DIST = $(man_MANS)
