examples: Add a basic server using synchronous I/O
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,9 +1,13 @@
 
 AM_CFLAGS = -I$(top_srcdir)/include
 
-noinst_PROGRAMS = basic_server
+noinst_PROGRAMS = basic_server basic_server_sync
 
 basic_server_SOURCES = basic_server.c
 
 basic_server_LDADD = $(top_builddir)/lib/libgensio.la $(OPENSSL_LIBS)
+
+basic_server_sync_SOURCES = basic_server_sync.c
+
+basic_server_sync_LDADD = $(top_builddir)/lib/libgensio.la $(OPENSSL_LIBS)
 
