--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -5,7 +5,7 @@ lib_LTLIBRARIES = libgensio.la
 
 noinst_HEADERS = telnet.h heap.h utils.h uucplock.h buffer.h \
 	gensio_filter_ssl.h gensio_filter_telnet.h gensio_ll_ipmisol.h \
-	gensio_filter_certauth.h
+	gensio_filter_certauth.h gensio_filter_msgdelim.h
 
 libgensio_la_SOURCES = \
 	gensio.c gensio_osops.c gensio_net.c gensio_udp.c gensio_stdio.c \
