--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,8 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = lib include $(SWIG_DIR) tests tools man examples
+SUBDIRS = lib include $(SWIG_DIR) $(TESTS_DIR) tools man examples
 
-DIST_SUBDIRS = lib swig include tests tools man examples
+DIST_SUBDIRS = lib swig include $(TESTS_DIR) tools man examples
 
 EXTRA_DIST = README.rst reconf
