--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -3,6 +3,8 @@ AM_CFLAGS = -I$(top_srcdir)/include
 
 noinst_PROGRAMS = basic_server basic_server_sync
 
+EXTRA_DIST = basic_server.py
+
 basic_server_SOURCES = basic_server.c
 
 basic_server_LDADD = $(top_builddir)/lib/libgensio.la $(OPENSSL_LIBS)
