examples: Add a basic client example
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,13 +1,17 @@
 
 AM_CFLAGS = -I$(top_srcdir)/include
 
-noinst_PROGRAMS = basic_server basic_server_sync
+noinst_PROGRAMS = basic_server basic_server_sync basic_client
 
-EXTRA_DIST = basic_server.py
+EXTRA_DIST = basic_server.py basic_client.py
 
 basic_server_SOURCES = basic_server.c
 
 basic_server_LDADD = $(top_builddir)/lib/libgensio.la $(OPENSSL_LIBS)
+
+basic_client_SOURCES = basic_client.c
+
+basic_client_LDADD = $(top_builddir)/lib/libgensio.la $(OPENSSL_LIBS)
 
 basic_server_sync_SOURCES = basic_server_sync.c
 
