--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,5 +1,5 @@
 
-AM_CFLAGS = -I$(top_srcdir)/include -I$(top_srcdir) $(OPENSSL_INCLUDES)
+AM_CFLAGS = -I$(top_srcdir)/include $(OPENSSL_INCLUDES)
 
 lib_LTLIBRARIES = libgensio.la
 
