Add cmake build capability
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/include/gensio/Makefile.am
+++ b/include/gensio/Makefile.am
@@ -5,5 +5,5 @@ pkginclude_HEADERS = gensio.h gensio_class.h sergensio.h sergensio_class.h \
 	gensio_os_funcs.h gensio_err.h gensio_builtins.h gensio_osops.h \
 	gensio_list.h gensio_version.h
 
-EXTRA_DIST = gensio_version.h.in
+EXTRA_DIST = gensio_version.h.in CMakeLists.txt
 
