--- a/tools/gtlssh-keygen.in
+++ b/tools/gtlssh-keygen.in
@@ -13,7 +13,7 @@ KEYDIR_SET=false
 DEFAULT_KEYDAYS=365
 KEYDAYS=$DEFAULT_KEYDAYS
 
-CONFDIR="@sysconfdir@/gtlssh"
+CONFDIR="@SYSCONFDIR@/gtlssh"
 
 COMMONNAME=
 COMMONNAME_SET=false
