--- a/Makefile.am
+++ b/Makefile.am
@@ -5,4 +5,4 @@ SUBDIRS = lib include $(SWIG_DIR) tests tools man examples
 
 DIST_SUBDIRS = lib swig include tests tools man examples
 
-EXTRA_DIST = README.rst reconf
+EXTRA_DIST = README.rst reconf CMakeLists.txt config.h.cmake
