--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -1,5 +1,5 @@
 
-AM_CFLAGS = -I$(top_srcdir)/include
+AM_CFLAGS = -I$(top_srcdir)/include -I$(top_builddir)/include
 
 AM_CPPFLAGS = -DSYSCONFDIR="\"${sysconfdir}\""
 
