--- a/tests/runtest.in
+++ b/tests/runtest.in
@@ -66,5 +66,5 @@ fi
 if ${PRINT_MODE}; then
     echo ${RUNPREFIX} ${TEST} $*
 else
-    ${RUNPREFIX} ${TEST} $*
+    exec ${RUNPREFIX} ${TEST} $*
 fi
