Make the unix network gensio optional on detection
It may not be there for all systems.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,8 @@ CHECK_LIBRARY_EXISTS(pam "pam_start" "" HAVE_PAM)
 
 check_symbol_exists(TIOCSRS485 sys/ioctl.h HAVE_DECL_TIOCSRS485)
 
+CHECK_INCLUDE_FILE(sys/un.h HAVE_UNIX)
+
 option(ENABLE_INTERNAL_TRACE
        "Enable internal trace tools, required for oomtest"
        OFF)
