file: Allow stdio to be used for file gensio
You lose the ability to set the file mode on creation, but you get the
ability to work on non-unix systems.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,9 @@ check_symbol_exists(TIOCSRS485 sys/ioctl.h HAVE_DECL_TIOCSRS485)
 
 CHECK_INCLUDE_FILE(sys/un.h HAVE_UNIX)
 
+option(USE_FILE_STDIO "Use stdio instead of unix files for the file gensio"
+       ${MSVC})
+
 option(ENABLE_INTERNAL_TRACE
        "Enable internal trace tools, required for oomtest"
        OFF)
