Start splitting out unix-specific files
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,18 +1,53 @@
 option(ALSOSTATIC "When buiding a shared library, build a static one, too")
 
-set(LIBFILES buffer.c gensio_filter_telnet.c gensio_ssl.c
-	gensio_acc.c              gensio_filter_trace.c   gensio_stdio.c
-	gensio_acc_gensio.c       gensio_ll_fd.c          gensio_trace.c
-	gensio_base.c             gensio_ll_gensio.c      gensio_udp.c
-	gensio.c                  gensio_ll_ipmisol.c     selector.c
-	gensio_certauth.c         gensio_msgdelim.c       sergensio.c
-	gensio_dummy.c            gensio_mux.c            sergensio_ipmisol.c
-	gensio_echo.c             gensio_net.c            sergensio_serialdev.c
-	gensio_file.c             gensio_osops.c          sergensio_telnet.c
-	gensio_filter_certauth.c  gensio_pty.c            telnet.c
-	gensio_filter_msgdelim.c  gensio_relpkt.c         utils.c
-	gensio_filter_relpkt.c    gensio_sctp.c           uucplock.c
-	gensio_filter_ssl.c       gensio_selector.c       waiter.c)
+set(BASE_LIBFILES
+  buffer.c
+  gensio_net.c
+  gensio_filter_telnet.c
+  gensio_ssl.c
+  gensio_acc.c
+  gensio_filter_trace.c
+  gensio_acc_gensio.c
+  gensio_trace.c
+  gensio_base.c
+  gensio_ll_gensio.c
+  gensio_udp.c
+  gensio.c
+  gensio_ll_ipmisol.c
+  gensio_certauth.c
+  gensio_msgdelim.c
+  sergensio.c
+  gensio_dummy.c
+  gensio_mux.c
+  sergensio_ipmisol.c
+  gensio_echo.c
+  gensio_file.c
+  gensio_osops.c
+  sergensio_telnet.c
+  gensio_filter_certauth.c
+  telnet.c
+  gensio_filter_msgdelim.c
+  gensio_relpkt.c
+  utils.c
+  gensio_filter_relpkt.c
+  gensio_sctp.c
+  gensio_filter_ssl.c
+  gensio_selector.c
+  waiter.c)
+
+set(UNIX_LIBFILES
+  gensio_stdio.c
+  gensio_ll_fd.c
+  selector.c
+  sergensio_serialdev.c
+  uucplock.c
+  gensio_pty.c)
+
+if(MSVC)
+  set(LIBFILES ${BASE_LIBFILES})
+else()
+  set(LIBFILES ${BASE_LIBFILES} ${UNIX_LIBFILES})
+endif()
 
 add_library(gensio ${LIBFILES})
 if(BUILD_SHARED_LIBS AND ALSOSTATIC)
